tests-integration/tests/checking/snapshots/checking__generated__022_row_basic_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms

Types
Person :: Type
PersonRow :: Row Type
PersonRecord :: Type

Synonyms
Person = Record ( age :: Int, name :: String )
  Quantified = :0
  Kind = :0
  Type = :0

PersonRow = ( age :: Int, name :: String )
  Quantified = :0
  Kind = :0
  Type = :0

PersonRecord = Record ( age :: Int, name :: String )
  Quantified = :0
  Kind = :0
  Type = :0
