tests-integration/tests/checking/snapshots/checking__generated__026_row_empty_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms

Types
EmptyRow :: forall (t1 :: Type) (t2 :: t1). Row t2
EmptyRecord :: Type
TailOnly :: forall (t10 :: Type). Row t10 -> Row t10
TailOnlyRecord :: Row Type -> Type

Synonyms
EmptyRow = ()
  Quantified = :0
  Kind = :0
  Type = :0

EmptyRecord = Record ()
  Quantified = :0
  Kind = :0
  Type = :0

TailOnly = forall (t10 :: Type) (r :: Row t10). ( | r )
  Quantified = :1
  Kind = :0
  Type = :1

TailOnlyRecord = forall (r :: Row Type). Record ( | r )
  Quantified = :0
  Kind = :0
  Type = :1
