tests-integration/tests/checking/snapshots/checking__generated__034_value_recursive_infer_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
loop :: forall (t1 :: Type). t1 -> ???

Types
