tests-integration/tests/checking/snapshots/checking__generated__035_value_mutual_both_signature_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
f :: forall (a :: Type). a -> a
g :: forall (a :: Type). a -> a

Types

Errors
CannotUnify { t1: Id<checking::core::Type>(8), t2: Id<checking::core::Type>(9) } at [TermDeclaration(Idx::<TermItem>(1))]
