tests-integration/tests/checking/snapshots/checking__generated__036_value_mutual_one_signature_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
g :: forall (t3 :: Type). t3 -> t3
f :: forall (a :: Type). a -> a

Types
