tests-integration/tests/checking/snapshots/checking__generated__037_value_mutual_no_signature_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
f :: forall (t5 :: Type) (t6 :: Type). t6 -> t5
g :: forall (t5 :: Type) (t6 :: Type). t6 -> t5

Types
