tests-integration/tests/checking/snapshots/checking__generated__038_value_mutual_polytype_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
idRec :: forall (a :: Type). a -> a
choose :: forall (a :: Type). a -> a -> a

Types

Errors
CannotUnify { t1: Id<checking::core::Type>(8), t2: Id<checking::core::Type>(9) } at [TermDeclaration(Idx::<TermItem>(1))]
